@@ -1,3 +1,15 @@
+2018-06-19  Tony Reix  <tony.reix@atos.com>
+	    Damien Bergamini  <damien.bergamini@atos.com>
+	    David Edelsohn  <dje.gcc@gmail.com>
+
+	* collect2.c (static_obj): New variable.
+	(static_libs): New variable.
+	(is_in_list): Uncomment declaration.
+	(main): Track AIX libraries linked statically.
+	(is_in_list): Uncomment definition.
+	(scan_prog_file): Don't add AIX shared libraries initializer
+	to constructor list if linking statically.
+
 2018-06-19  Max Filippov  <jcmvbkbc@gmail.com>
 
 	* config/xtensa/xtensa.md (UNSPEC_FRAME_BLOCKAGE): New unspec
